fixed a few typos, removed a redundant step

--- a/src/content/docs/de/meetingcontrols.mdx
+++ b/src/content/docs/de/meetingcontrols.mdx
@@ -32,7 +32,7 @@ Scribe for Meetings bietet mehrere Möglichkeiten zur Steuerung des Renderings. 
 Wenn der Veranstalter das Herunterladen der Folien erlaubt hat, bietet Scribe for Meetings die Möglichkeit, die Folien in mehreren zugänglichen Formaten herunterzuladen. Um Folien herunterzuladen, gehen Sie wie folgt vor:
 1. aktivieren Sie während eines Meetings den Link "Folien herunterladen".
 	1. Wenn Sie nicht eingeloggt sind, werden Sie nach Ihrer E-Mail-Adresse gefragt, woraufhin Sie einen Bestätigungslink per E-Mail erhalten.
-	1. Wenn Sie auf diesen Link klicken, werden Sie eingeloggt und können mit dem Erstellungsprozess des Meetings fortfahren.
+	1. Wenn Sie auf diesen Link klicken, werden Sie eingeloggt und können mit der Vorbereitung des Downloads fortfahren.
 1. Wählen Sie das Dateiformat, in dem Ihre Folien präsentiert werden sollen. Sie haben folgende Möglichkeiten:
     * Eine zugängliche Webseite mit denselben Funktionen wie die Live-Präsentation, einschließlich Vorlesen
     * PDF mit Tagging
