--- a/src/content/docs/en/meetingcontrols.mdx
+++ b/src/content/docs/en/meetingcontrols.mdx
@@ -32,7 +32,7 @@ Scribe for Meetings offers several ways to control the rendering. These clickabl
 Provided the organizer has allowed for slides to be downloaded, Scribe for Meetings offers downloads of the slides in several accessible formats. In order to download slides, follow the below procedure:
 1. while in a meeting, activate the "Download Slides" link.
 	1. If you are not logged in, you will be asked for your email address, at which point you will be emailed a verification link.
-	1. Clicking this link will log you in, thus continuing the meeting creation process.
+	1. Clicking this link will log you in, thus continuing the download preparation process.
 1. Choose the file format you would like your slides to be presented as. Your options include:
     * An accessible web page, with all of the same features as the live presentation, including read aloud
     * Tagged PDF
