--- a/src/content/docs/es/meetingcontrols.mdx
+++ b/src/content/docs/es/meetingcontrols.mdx
@@ -32,7 +32,7 @@ Scribe for Meetings ofrece varias formas de controlar la representación. Estos 
 Siempre que el organizador haya permitido la descarga de las diapositivas, Scribe for Meetings ofrece la posibilidad de descargar las diapositivas en varios formatos accesibles. Para descargar las diapositivas, siga el procedimiento que se indica a continuación:
 1. estando en una reunión, active el enlace "Descargar diapositivas".
 	1. Si no ha iniciado sesión, se le pedirá su dirección de correo electrónico, tras lo cual se le enviará un enlace de verificación.
-	1. Al hacer clic en este enlace, iniciará la sesión y continuará con el proceso de creación de la reunión.
+	1. Al hacer clic en este enlace, iniciará sesión y continuará con el proceso de preparación de la descarga.
 1. Elija el formato de archivo en el que desea presentar sus diapositivas. Sus opciones incluyen:
     * Una página web accesible, con todas las mismas características que la presentación en directo, incluida la lectura en voz alta
     * PDF etiquetado
