--- a/src/content/docs/fr/meetingcontrols.mdx
+++ b/src/content/docs/fr/meetingcontrols.mdx
@@ -32,7 +32,7 @@ Scribe for Meetings offre plusieurs moyens de contrôler le rendu. Ces boutons c
 Si l'organisateur a autorisé le téléchargement des diapositives, Scribe for Meetings permet de télécharger les diapositives dans plusieurs formats accessibles. Pour télécharger les diapositives, suivez la procédure ci-dessous :
 1. lorsque vous êtes dans une réunion, activez le lien "Télécharger les diapositives".
 	1. Si vous n'êtes pas connecté, votre adresse électronique vous sera demandée, puis un lien de vérification vous sera envoyé par courrier électronique.
-	1. En cliquant sur ce lien, vous vous connecterez, ce qui vous permettra de poursuivre le processus de création de la réunion.
+	1. En cliquant sur ce lien, vous vous connecterez, ce qui vous permettra de poursuivre le processus de préparation du téléchargement.
 1. Choisissez le format de fichier dans lequel vous souhaitez que vos diapositives soient présentées. Vous avez le choix entre
     * Une page web accessible, avec toutes les mêmes fonctionnalités que la présentation en direct, y compris la lecture à haute voix
     * PDF étiqueté
