--- a/src/content/docs/it/meetingcontrols.mdx
+++ b/src/content/docs/it/meetingcontrols.mdx
@@ -32,7 +32,7 @@ Scribe for Meetings offre diversi modi per controllare il rendering. Questi puls
 Se l'organizzatore ha consentito il download delle diapositive, Scribe for Meetings offre la possibilità di scaricare le diapositive in diversi formati accessibili. Per scaricare le diapositive, seguire la seguente procedura:
 1. durante una riunione, attivare il link "Scarica diapositive".
 	1. Se non si è effettuato l'accesso, verrà richiesto l'indirizzo e-mail e a quel punto verrà inviato un link di verifica.
-	1. Facendo clic su questo link si accede alla riunione, proseguendo così il processo di creazione della riunione.
+	1. Facendo clic su questo link si accede al sito e si prosegue con il processo di preparazione del download.
 1. Scegliete il formato di file in cui volete che siano presentate le vostre diapositive. Le opzioni disponibili sono:
     * Una pagina web accessibile, con tutte le stesse caratteristiche della presentazione dal vivo, compresa la lettura ad alta voce
     * PDF etichettato
