--- a/src/content/docs/pt/meetingcontrols.mdx
+++ b/src/content/docs/pt/meetingcontrols.mdx
@@ -32,7 +32,7 @@ O Scribe for Meetings oferece várias maneiras de controlar a renderização. Es
 Desde que o organizador tenha permitido o download dos slides, o Scribe for Meetings oferece downloads dos slides em vários formatos acessíveis. Para fazer o download dos slides, siga o procedimento abaixo:
 1. enquanto estiver em uma reunião, ative o link "Download Slides".
 	1. Se não estiver conectado, será solicitado seu endereço de e-mail e, nesse momento, você receberá um link de verificação por e-mail.
-	1. Ao clicar nesse link, você fará o login e continuará o processo de criação da reunião.
+	1. Ao clicar nesse link, você fará o login e continuará o processo de preparação do download.
 1. Escolha o formato de arquivo em que deseja que seus slides sejam apresentados. Suas opções incluem:
     * Uma página da Web acessível, com todos os mesmos recursos da apresentação ao vivo, incluindo leitura em voz alta
     * PDF com tags
