--- a/src/content/docs/sv/meetingcontrols.mdx
+++ b/src/content/docs/sv/meetingcontrols.mdx
@@ -32,7 +32,7 @@ Scribe for Meetings erbjuder flera sätt att styra renderingen. Dessa klickbara 
 Förutsatt att arrangören har tillåtit nedladdning av bilder, erbjuder Scribe for Meetings nedladdning av bilderna i flera tillgängliga format. För att ladda ner bilder, följ nedanstående procedur:
 1. när du är i ett möte, aktivera länken "Ladda ner bilder".
 	1. Om du inte är inloggad kommer du att bli ombedd att ange din e-postadress, varefter du kommer att få en verifieringslänk skickad till dig.
-	1. Om du klickar på denna länk loggas du in och kan fortsätta skapa mötet.
+	1. Om du klickar på den här länken loggar du in och fortsätter att förbereda nedladdningen.
 1. Välj det filformat som du vill att dina bilder ska presenteras som. Dina alternativ inkluderar:
     * En tillgänglig webbsida, med alla samma funktioner som i livepresentationen, inklusive uppläsning
     * Taggad PDF
