pt trnslation fixed

--- a/src/content/docs/pt/welcome.mdx
+++ b/src/content/docs/pt/welcome.mdx
@@ -1,40 +1,40 @@
 ---
-title: Welcome!
+title: Seja bem-vindo!
 ---
 
 import Windows from "~/components/platform/Windows.astro"
 import MacOS from "~/components/platform/MacOS.astro"
 
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
-## Introducing Scribe for Meetings
+## Apresentando o Scribe para Reuniões
 
-Scribe for Meetings easily makes your Zoom or Microsoft Teams screen shares accessible to participants using a screen reader or screen magnification! We know accessibility compliance is important to you, especially when you’re unsure if your original content is fully optimized for accessibility. Scribe for Meetings can easily make your screen shares simultaneously available as WCAG2.1 compliant HTML in as little as 5-minutes.
+O Scribe for Meetings torna facilmente seus compartilhamentos de tela do Zoom ou do Microsoft Teams acessíveis aos participantes que usam um leitor de tela ou ampliação de tela! Sabemos que a conformidade com a acessibilidade é importante para você, especialmente quando você não tem certeza se o conteúdo original está totalmente otimizado para acessibilidade. O Scribe for Meetings pode facilmente tornar seus compartilhamentos de tela disponíveis simultaneamente como HTML compatível com WCAG2.1 em apenas 5 minutos.
 
-## How easy is Scribe for Meetings to use?
+## Quão fácil é usar o Scribe for Meetings?
 
-1. Upload your slide deck in advance or as little as 5-minutes before your webinar.
-1. Paste a link in the chat area we provide you during your meeting (includes participant instructions).
-1. Participants requiring accessible content click the link and get full access to your presentation…
+1. Faça o upload de seu conjunto de slides com antecedência ou apenas 5 minutos antes do webinar.
+1. Cole um link que fornecemos a você na área de bate-papo durante a reunião (inclui instruções para os participantes).
+1. Os participantes que precisam de conteúdo acessível clicam no link e obtêm acesso total à sua apresentação..
 
-And it’s on with the slide show!
+E a apresentação de slides continua!
 
-## Scribe For Meetings features
+## Recursos do Scribe For Meetings
 
-* Confidently upload accessible shared content in as little as 5-minutes before your presentation.
-* No additional app or software to install to create or access content.
-* Currently works with Zoom (meetings and webinars) and Microsoft Teams.
-* Your content is formatted into WCAG2.1 compliant Accessible HTML during upload.
-* Graphical descriptions are automatically added to your slides.
-* Participants can pause their view anytime for additional reading while you continue on.
-* One click and attendees are reading your presentation using their screen reader.
+* Carregue com confiança conteúdo compartilhado acessível em apenas 5 minutos antes da sua apresentação.
+* Não é necessário instalar nenhum aplicativo ou software adicional para criar ou acessar o conteúdo.
+* Atualmente funciona com o Zoom (reuniões e webinars) e o Microsoft Teams.
+* Seu conteúdo é formatado em HTML acessível compatível com WCAG2.1 durante o upload.
+* As descrições gráficas são adicionadas automaticamente aos seus slides.
+* Os participantes podem pausar a visualização a qualquer momento para leitura adicional enquanto você continua.
+* Com um clique, os participantes estarão lendo a sua apresentação usando o leitor de tela.
 
-## Amazingly simple, Incredibly powerful.
+## Incrivelmente simples, incrivelmente poderoso.
 
-When you make your screen shares accessible with Scribe for Meetings, the content is displayed in a separate window. Participants continue to have full access to the Zoom or Microsoft Teams session.
-Attendees can switch back and forth from the Zoom or Microsoft Teams meeting to your accessible screen share anytime they want.
+Quando você torna seus compartilhamentos de tela acessíveis com o Scribe for Meetings, o conteúdo é exibido em uma janela separada. Os participantes continuam a ter acesso total à sessão do Zoom ou do Microsoft Teams.
+Os participantes podem alternar entre a reunião do Zoom ou do Microsoft Teams e o compartilhamento de tela acessível sempre que desejarem.
 
-There is no need to give extra instructions on how to access your shared content or break up the flow of your presentation. Participants will intuitively read content just like any other web page.
+Não há necessidade de dar instruções adicionais sobre como acessar o conteúdo compartilhado ou interromper o fluxo da sua apresentação. Os participantes lerão o conteúdo intuitivamente, como em qualquer outra página da Web.
 
-## Documentation Interface
+## Interface de documentação
 
-This documentation features easy controls for moving from one section to another, as well as selecting a language to read the documentation in.
+Esta documentação apresenta controles fáceis para passar de uma seção para outra, além de selecionar um idioma para a leitura da documentação.
